--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <html>
   <head>
       <title>My Website title</title>
+      <script type="text/javascript" src="./file.js"></script>
     </head>
   <body>
-    Hello, World!
+    <button onclick="sayHelloConsole();">Hello, Console!</button>
+    <button onclick="sayHelloPopUp();">Hello, Pop-up!</button>
+    <button onclick="sayHelloBrowser();">Hello, Browser!</button>
+    <button onclick="sayHelloStranger();">Hello, Stranger!</button>
+    <p id="hello"></p>
   </body>
 </html>
